2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    Patches by Henry Proudhon:
    * swt/org/jfree/experimental/chart/swt/ChartComposite.java
    (ChartComposite): Removed duplicate listener registration,
    (paintControl): Switched horizontalAxisTrace and verticalAxisTrace,
    (dispose): New method,
    * swt/org/jfree/experimental/swt/SWTGraphics2D.java
    (transformsPool): New field,
    (setBackground): Use color pool,
    (setTransform): Use transform pool,
    (transform): Likewise,
    (disposeResourcePool): Clear the fontsPool and transformsPool,
    (getSwtTransformFromPool): New method,
    (toSwtTransform): Removed.

2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (isPointInRect): New utility method,
    * source/org/jfree/chart/renderer/xy/StandardXYItemRenderer.java
    (drawItem): Modified bounds check for inclusion of chart entity,
    * source/org/jfree/chart/renderer/xy/XYLineAndShapeRenderer.java
    (drawSecondaryPass): Modified bounds check for inclusion of chart entity.

2008-05-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/DateRange.java
    (lowerDate): Changed from Date to long,
    (upperDate): Likewise,
    (DateRange(Date, Date)): Updated for field type change,
    (DateRange(long, long)): Likewise,
    (getLowerDate): Likewise,
    (getUpperDate): Likewise,
    (toString): Likewise,
    * source/org/jfree/data/time/FixedMillisecond.java
    (time): Changed from Date to long.

2008-05-26  David Gilbert  <david.gilbert@object-refinery.com> 

    * source/org/jfree/chart/labels/AbstractXYItemLabelGenerator.java
    (getNullYString): New method,
    (equals): Check nullYString,
    * source/org/jfree/chart/labels/IntervalXYItemLabelGenerator.java:
    New file,
    * source/org/jfree/chart/renderer/xy/YIntervalRenderer.java
    (additionalItemLabelGenerator): New field,