@@ -1,5 +1,10 @@
 2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
 
+    * source/org/jfree/chart/plot/SpiderWebPlot.java
+    (drawRadarPoly): Check dataExtractOrder when generating chart entities.
+
+2008-06-02  David Gilbert  <david.gilbert@object-refinery.com>
+
     Patches by Henry Proudhon:
     * swt/org/jfree/experimental/chart/swt/ChartComposite.java
     (ChartComposite): Removed duplicate listener registration,
